<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ScheduleDaily"
    tools:context=".ScheduleDaily">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/Monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monthly"
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/Weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weekly "
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/PreviousDayAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Left"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/white"
            />

        <TextView
            android:id="@+id/Day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daily"
            android:textSize="20dp"
            android:textAlignment="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Right"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/white"
            android:id="@+id/NextDayAction"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/dayOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Monday"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/AddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Event"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/ClearEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear Last Event"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/hourEventList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
            />
    </LinearLayout>

</LinearLayout>