<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/PersonalProfile"
    tools:context=".PersonalProfileUsers"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="325dp">
        <LinearLayout
...
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/BlockList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:text="Blocked Users"
                        android:textSize="20dp" />

                </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/EditPersonalProfile"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Edit Profile"
                    android:backgroundTint="@color/black"
                    android:textSize="20dp"
                />
            </LinearLayout>
                <LinearLayout
                    android:gravity="center"
...
